@@ -2,6 +2,11 @@
 			A RISC OS-like filer for X
 			by Thomas Leonard
 
+12-Jan-2005
+~~~~~~~~~~~
+Slight change to install script for when the installation directory is
+on an NFS mount (Stephen Watson).
+
 10-Jan-2005
 ~~~~~~~~~~~
 Can now disable use of extended attributes (Stephen Watson).
